Cosmetic changes of the code

--- a/obrazovanie.html
+++ b/obrazovanie.html
@@ -14,7 +14,7 @@
                     <img src="images/Dragana-designstyle-boots-m.png" height="200" width="630"/>
                 </li>
                 <li>
-                    <a href="Biografija.html" >
+                    <a href="index.html" >
                         БИОГРАФИЈА
                     </a>
                 </li>
@@ -23,7 +23,7 @@
                         ОБРАЗОВАНИЕ </a>
                 </li>
                 <li>
-                    <a href="Hobi.html" >
+                    <a href="hobi.html" >
 
 
                         ХОБИ</a>
